<?xml version="1.0"?>
<package format="3">
  <name>homework_bringup</name>
  <version>0.0.1</version>
  <description>Launch package</description>
  
  <maintainer email="user@todo.com">user</maintainer>
  <license>Apache License 2.0</license>
  
  <exec_depend>vision_kalman_filter</exec_depend>
  <exec_depend>serial_comman</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>