<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema-instance"?>
<package format="3">
  <name>serial_comman</name>
  <version>0.0.1</version>
  <description>串口通信节点，用于发送转向和开火命令</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>MIT</license>

  <!-- 构建工具依赖 -->
  <buildtool_depend>ament_cmake</buildtool_depend>


  <!-- 普通依赖 -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>  
  <depend>builtin_interfaces</depend>
  
  <depend>vision_kalman_filter</depend>


  <!-- 测试依赖 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>